fixed image bleeds

--- a/AOA/src/styles/people.module.css
+++ b/AOA/src/styles/people.module.css
@@ -35,6 +35,13 @@
     text-align: center;
 }
 
+.card img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
 .card:hover {
     transform: scale(1.05);
 }
